@startuml

title __EVENT's Class Diagram__\n

  package  {
    package event {
      class Evaporation {
          {static} ~ eta : double
          {static} ~ rho : double
          + Evaporation()
          {static} + getEta()
          {static} + setEta()
          {static} + getRho()
          {static} + setRho()
          + SimulateEvent()
      }
    }
  }
  

  package  {
    package event {
      abstract class Event {
          ~ time : double
          + Event()
          + SimulateEvent()
          + getTime()
          + setTime()
      }
    }
  }
  

  package  {
    package event {
      class EventComparator {
          + compare()
      }
    }
  }
  

  package  {
    package event {
      class Move {
          {static} ~ alpha : double
          {static} ~ beta : double
          {static} ~ delta : double
          + Move()
          {static} + getAlpha()
          {static} + setAlpha()
          {static} + getBeta()
          {static} + setBeta()
          {static} + getDelta()
          {static} + setDelta()
          + SimulateEvent()
          - check_hamiltonian_cycle()
          - countFrequencies()
      }
    }
  }
  

  package  {
    package event {
      class ShowResults {
          {static} ~ finalinst : double
          {static} ~ observation : int
          {static} ~ mevents : int
          {static} ~ eevents : int
          + ShowResults()
          + SimulateEvent()
          + toString()
      }
    }
  }
  

  Evaporation -up-|> Event
  Evaporation o-- Edge : edge
  Event o-- Graph : graph
  Event o-- PEC : pec
  EventComparator -up-|> Comparator
  Move -up-|> Event
  Move o-- Ant : ant
  ShowResults -up-|> Event
  ShowResults o-- Colony : colony


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
